# Kaesekaestchen

./: .gitignore  Dockerfile  Kaesekaestchen.cabal  README.md  index.html  makefile  stack.yaml
app/: Main.hs
src/client/: .dropstack.json  Flags.elm  Main.elm  Routing.elm  elm-package.json  index.html  indexReactor.html  style.css
src/client/Api/: Game.elm
src/client/Component/: Game.elm  Lobby.elm
src/server/: ElmExport.hs  Game.hs  Lib.hs
static/: elm.js  style.css
test/: Spec.hs
