name:                Kaesekaestchen
version:             0.1.0.0
synopsis:            ever public shoud know this nice game ... saved my sanity during my youth
-- description:
homepage:            https://github.com/CarstenKoenig/Kaesekaestchen#readme
license:             BSD3
license-file:        LICENSE
author:              Carsten König
maintainer:          Carsten@gettingsharper.de
copyright:           Copyright: (c) 2016 Carsten König
category:            game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/server
  exposed-modules:     Lib
                     , Game
                     , ElmExport
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , elm-export
                     , mtl
                     , network
                     , servant-elm
                     , servant-options                     
                     , servant-server
                     , transformers
                     , text
                     , uuid
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010
  ghc-options:       -Wall

executable Kaesekaestchen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Kaesekaestchen
  default-language:    Haskell2010

test-suite Kaesekaestchen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Kaesekaestchen
                     , bytestring
                     , containers
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CarstenKoenig/Kaesekaestchen
